@@ -1,9 +1,12 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-import os
+import __main__ as main
 import configparser
-import urllib.parse
 import logging
+import os
+import urllib.parse
+
+from . import status
 
 __all__ = ['config', 'get_hostname', 'get_port', 'split_netloc',
     'parse_listen', 'parse_uri']
@@ -151,3 +154,6 @@ class TrytonConfigParser(configparser.ConfigParser):
 
 
 config = TrytonConfigParser()
+
+if os.path.basename(main.__file__) != 'trytond-stat':
+    status.start(config.get('database', 'path'))
