@@ -1,3 +1,4 @@
+* Add status command
 * Add document widget on form view
 * Add full text and similarity search and FullText field
 * Add URL type to icon
